--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -34,6 +34,7 @@ header{
 .section-heading{
     max-width: 827px;
     text-align: center;
+    margin: 0 auto;
 }
 .section-heading h2{
     font-size: 35px;
@@ -120,4 +121,36 @@ nav .menu a{
 }
 .about-info .info-card h4{
     font-size: 20px;
+}
+#skills{
+    padding-top: 130px;
+}
+#skills .skill-container{
+    width: 70%;
+    max-width: 1140px;
+    margin: 0 auto;
+}
+#skills .skill-container .skills-box{
+    display: flex;
+    gap: 24px;
+}
+.skills-box .skill-card{
+    padding: 30px;
+    max-width: 267px;
+    /* border: 1px solid; */
+    box-shadow: 0 6px 50px 0 #00000037;
+}
+.skill-card img{
+    max-width: 44px;
+    margin-bottom: 30px
+}
+.skill-card h3{
+    font-size: 20px;
+    color: #181818;
+    margin-bottom: 20px;
+}
+.skill-card p{
+    font-size: 16px;
+    line-height: 28px;
+    color: #757575;
 }
