--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -46,8 +46,6 @@ header{
     line-height: 30px;
     color: #757575;
 }
-
-
 nav{
     width: 70%;
     max-width: 1140px;
@@ -98,7 +96,7 @@ nav .menu a{
     max-width: 585px;
     vertical-align: middle;
 }
-#about{
+#about, #skills, #resume{
     padding-top: 130px;
 }
 #about .about-container{
@@ -121,9 +119,6 @@ nav .menu a{
 }
 .about-info .info-card h4{
     font-size: 20px;
-}
-#skills{
-    padding-top: 130px;
 }
 #skills .skill-container{
     width: 70%;
@@ -151,6 +146,44 @@ nav .menu a{
 }
 .skill-card p{
     font-size: 16px;
+    line-height: 28px;
+    color: #757575;
+}
+.resume-container hr{
+    margin: 30px 0;
+}
+#resume .resume-container{
+    width: 70%;
+    max-width: 1140px;
+    margin: 113px auto 0;
+    display: flex;
+    gap: 24px;
+}
+#resume .resume-container .section-title{
+    font-size: 30px;
+    font-weight: 900;
+    color: #474747;
+    margin-bottom: 30px;
+}
+.resume-card{
+    max-width: 511px;
+    margin-right: 47px;
+}
+.resume-card .card-title{
+    font-size: 25px;
+    font-weight: 900;
+    color: #474747;
+    margin-bottom: 10px;
+}
+.resume-card .card-info{
+    font-size: 20px;
+    font-weight: 600;
+    color: #757575;
+    margin-bottom: 20px;
+}
+.resume-card .card-text{
+    font-size: 16px;
+    font-weight: 400;
     line-height: 28px;
     color: #757575;
 }
