--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -6,7 +6,7 @@
 header{
     background-color: #FFF8F3;
     background: url(../images/developer.png), url(../images/header_bg.png);
-    background-position: top left, bottom right;
+    background-position: 23px 38px, bottom right;
     background-repeat: no-repeat;
     padding-top: 50px;
 }
@@ -23,13 +23,16 @@ header{
 }
 .btn{
     font-size: 20;
-    font-weight: 400;
+    font-weight: 700;
     color: white;
     background-color: #FD6E0A;
     padding: 18px 35px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
+}
+.text-center{
+    text-align: center;
 }
 .section-heading{
     max-width: 827px;
@@ -185,5 +188,43 @@ nav .menu a{
     font-size: 16px;
     font-weight: 400;
     line-height: 28px;
+    color: #757575;
+}
+footer{
+    margin-top: 130px;
+    background-color: #FFF8F3;
+    padding: 130px;
+}
+footer .footer-container{
+    width: 70%;
+    max-width: 1140px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-around;
+    gap: 100px;
+}
+.footer-container .social{
+    max-width: 562px;
+}
+.footer-container h2{
+    font-size: 35px;
+    color: #181818;
+    margin-bottom: 20px;
+}
+.footer-container .social p{
+    font-size: 16px;
+    color: #474747;
+    line-height: 28px;
+    margin-bottom:30px;
+}
+.footer-container .icon a{
+    margin-right: 24px;
+}
+.footer-container form input[type="text"], .footer-container form textarea{
+    width: 461px;
+    padding: 18px 31px;
+    margin-bottom: 24px;
+    border: none;
+    border-radius: 5px;
     color: #757575;
 }
