--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -31,6 +31,11 @@ header{
     border-radius: 5px;
     cursor: pointer;
 }
+.btn-group{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+}
 .text-center{
     text-align: center;
 }
@@ -227,4 +232,74 @@ footer .footer-container{
     border: none;
     border-radius: 5px;
     color: #757575;
+}
+.hide{
+    display: none !important;
+}
+@media screen and (max-width:576px) {
+    #about, #skills, #resume {
+    padding-top: 60px;
+}
+#skills .skill-container .skills-box, #about .about-container .about-info, footer .footer-container, #resume .resume-container, nav, #banner{
+    flex-direction: column;
+}
+.section-heading h2 {
+    font-size: 30px;
+}
+.btn-group{
+    justify-content: center;
+}
+nav{
+    gap: 25px;
+}
+nav .menu{
+    flex-wrap: wrap;
+    justify-content: center;
+}
+header {
+    background:url(../images/header_bg.png);
+    background-position:bottom right;
+    background-repeat: no-repeat;
+    padding-top: 50px;
+}
+#banner{
+    margin: 20px;
+    gap: 20px;
+    text-align: center;
+}
+#banner .banner-image img{
+    width: 100%;
+}
+#banner .banner-content h1{
+    font-size: 55px;
+}
+#about .about-container{
+    padding: 30px 20px;
+}
+#about .about-container .about-info{
+    gap: 40px;
+}
+#skills .skill-container {
+    width: 95%;
+}
+#resume .resume-container{
+    margin-top: 60px;
+}
+.resume-card{
+    margin-right: 10px;
+}
+.skills-box .skill-card{
+    max-width: 100%;
+}
+footer{
+    padding: 70px;
+}
+.footer-container form input[type="text"], .footer-container form textarea {
+    width: 100%;
+    padding: 18px 31px;
+    margin-bottom: 24px;
+    border: none;
+    border-radius: 5px;
+    color: #757575;
+}
 }
